Wed Sep 08 15:23:38 BST 2004  Olly Betts <olly@survex.com>

	* xapian.i: Remove renaming of empty() methods to is_empty().

Wed Sep 08 05:34:10 BST 2004  Olly Betts <olly@survex.com>

	* README: Pike support is now in SWIG it seems.

Wed Sep 08 05:30:58 BST 2004  Olly Betts <olly@survex.com>

	* README: Updated list of languages which SWIG supports.

Wed Sep 08 04:53:07 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac: Disable tcl8 bindings if the tcl8.X-dev package
	  isn't installed.

Wed Sep 08 04:52:19 BST 2004  Olly Betts <olly@survex.com>

	* tcl8/.cvsignore: Ignore xapian.la.

Wed Sep 08 04:49:50 BST 2004  Olly Betts <olly@survex.com>

	* tcl8/.cvsignore: Ignore generated xapian_wrap.cc.

Wed Sep 08 04:15:06 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac,guile/Makefile.am,java/native/Makefile.am,
	  php4/Makefile.am,python/Makefile.am,tcl8/Makefile.am:
	  Use special SWIG PHP ldflags when linking the PHP glue library;
	  Only pass -W* switches when building with GCC; Suppress compiler
	  warnings by passing -Wno-uninitialized when building SWIG glue code;
	  Python bindings now delete generated xapian_wrap.h on "make clean".

Wed Sep 08 04:06:02 BST 2004  Olly Betts <olly@survex.com>

	* python/util.i: Suppress SWIG warning about MatchDecider::operator()
	  director discarding const.

Wed Sep 08 02:37:17 BST 2004  Olly Betts <olly@survex.com>

	* php4/.cvsignore: Updated.

Wed Sep 08 01:27:54 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac,php4/.cvsignore,php4/Makefile.am,
	  php4/docs/bindings.html,php4/docs/examples/simpleindex.php,
	  php4/docs/examples/simplesearch.php: Actually ship docs and
	  examples; fixed bug in includes introduced in last checkin; output
	  swig wrapper as xapian_wrap.cc not xapian_wrap.cpp for consitency
	  with other bindings; fixed documentation of wrapping of
	  Xapian::Query::OP_*; example scripts now load the xapian PHP
	  extension; simplesearch now works with multi-term queries.
